C/window.h

/*#include "shared/config-parser.h"
#include "shared/zalloc.h"
#include "shared/platform.h"*/

struct window;
struct widget;
struct display *
display_create(int *argc, char *argv[]);
void
display_set_user_data(struct display *display, void *data);
typedef void (*display_global_handler_t)(struct display *display,
					 uint32_t name,
					 const char *interface,
					 uint32_t version, void *data);
void
display_set_global_handler(struct display *display,
			   display_global_handler_t handler);
void *
display_bind(struct display *display, uint32_t name,
	     const struct wl_interface *interface, uint32_t version);
void
display_run(struct display *d);
typedef int (*widget_enter_handler_t)(struct widget *widget,
				      struct input *input,
				      float x, float y, void *data);
struct window *
window_create_custom(struct display *display);
struct widget *
window_add_widget(struct window *window, void *data);
struct wl_surface *
window_get_wl_surface(struct window *window);
/*struct wl_subsurface *
widget_get_wl_subsurface(struct widget *widget);

enum window_buffer_type {
	WINDOW_BUFFER_TYPE_EGL_WINDOW,
	WINDOW_BUFFER_TYPE_SHM,
};

void
display_surface_damage(struct display *display, cairo_surface_t *cairo_surface,
		       int32_t x, int32_t y, int32_t width, int32_t height);

void
window_set_buffer_type(struct window *window, enum window_buffer_type type);

enum window_buffer_type
window_get_buffer_type(struct window *window);

int
window_is_fullscreen(struct window *window);

void
window_set_fullscreen(struct window *window, int fullscreen);

int
window_is_maximized(struct window *window);

void
window_set_maximized(struct window *window, int maximized);

int
window_is_resizing(struct window *window);

void
window_set_minimized(struct window *window);*/

void
window_set_user_data(struct window *window, void *data);
void *
window_get_user_data(struct window *window);
void
widget_set_allocation(struct widget *widget,
		      int32_t x, int32_t y, int32_t width, int32_t height);
void
widget_set_transparent(struct widget *widget, int transparent);
void
widget_schedule_resize(struct widget *widget, int32_t width, int32_t height);
void
widget_set_enter_handler(struct widget *widget,
			 widget_enter_handler_t handler);